--- a/AttendanceApp.UI/AttendanceApp.UI.csproj
+++ b/AttendanceApp.UI/AttendanceApp.UI.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AttendanceApp.BLL\AttendanceApp.BLL.csproj" />
+  </ItemGroup>
+
 </Project>
