--- a/AttendanceApp.BLL/AttendanceApp.BLL.csproj
+++ b/AttendanceApp.BLL/AttendanceApp.BLL.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AttendanceApp.Entity\AttendanceApp.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
